# CvMarketOracle

./: .gitignore  README.md  pyproject.toml  saved_pyproject.toml
conf/: config.yaml
conf/artifacts/: artifacts.yaml
conf/callbacks/: callbacks.yaml
conf/data_loading/: data_loading.yaml
conf/logging/: logging.yaml
conf/model/: model.yaml
conf/training/: training.yaml
conf/training/trainer/: trainer.yaml
help_src/gpt_api/: perplexity_api.py  test.ipynb  yandex_api.py
help_src/patterns/: BreakOut_Indicator (2).ipynb  channel_analysis.py  classes.py  src.py  test.ipynb
help_src/tg_bot/: bot_commands.py  config.py  keyboards.py  logger.py  main.py  middlewares.py
help_src/tg_bot/handlers/: __init__.py  advice_handlers.py  asset_handlers.py  common_handlers.py
help_src/tg_bot/services/: advice_service.py  assets_list.py  tsf_predict_service.py
help_src/utils/: sort_by_capital.py
market_oracle_lib/: __init__.py  consts.py  infer.py  model.py  parse_conf.py  train.py  validate.py
market_oracle_lib/data/: data_classes.py  data_funcs.py  make_features.py  yfinance.py
market_oracle_lib/data_lib/: apimoex.py  data_classes.py  data_funcs.py  t_bank.py  yfinance.py
notebooks/: .gitignore  API_MOEX.ipynb  TryVLM.py  YaAPI.ipynb  example.ipynb  patterns.ipynb
notebooks/ya_datasets/: ex_template.json  vlm_request_1.json  vlm_request_2.json
saved_res_data/: all_need_funcs.py  visual_res.ipynb
saved_res_data/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
saved_res_data/catboost_info/learn/: events.out.tfevents
(+3 files in other folders)
